新增面试服务

--- a/src/main/resources/assets/main.htm
+++ b/src/main/resources/assets/main.htm
@@ -1,11 +1,10 @@
 <div class="col-md-12">
 <div class="tile">
-	<div class="p-10">
+	<div class="tile-body p-10" style="max-height:10pc;overflow:auto;">
 		<div>
 			<h3>${welcomeMsg}</h3>
 		</div>
-		<div id="goal-list-key" class="listview narrow"
-			style="max-height: 8pc; overflow-y: scroll;">
+		<div id="goal-list-key" class="listview narrow">
 			<% for(item in assistantList){ %>
 			<div class="media">
 				<div class="pull-right">
