--- a/src/main/resources/assets/goal/index.htm
+++ b/src/main/resources/assets/goal/index.htm
@@ -1,18 +1,18 @@
 <div class="col-md-4 ${assistantName}-container">
 
-	<div class="tile index">
+	<div class="tile">
 		<h2 class="tile-title">${assistantName}</h2>
 		<div class="tile-body p-10">
-			<div class="listview narrow ${assistantName}-list">
+			<div class="listview narrow">
 				<% for(item in goalList){ %>
-				<div class="media ${assistantName}-item" item-id="${item.goal_name}">
+				<div class="media ${assistantName}-item" goal-name="${item.goal_name}">
 					<div class="pull-right">
-                         <div class="counts">${item.goal_cost_hours}</div>
+                         <div class="counts">${item.goal_cost_hours*item.goal_process/100}/${item.goal_cost_hours} h</div>
                     </div>
                     <div class="media-body">
                         <h6>${item.goal_name}</h6>
                         <div class="progress progress-small">
-                            <a href="#" data-toggle="tooltip" title="60%" class="progress-bar tooltips progress-bar-danger" style="width: ${item.goal_process}%;" data-original-title="${item.goal_process}%"></a>
+                            <a href="#" data-toggle="tooltip" title="${item.goal_process}%" class="progress-bar tooltips progress-bar-danger" style="width: ${item.goal_process}%;" data-original-title="${item.goal_process}%"></a>
                         </div>
                     </div>
 				</div>
@@ -40,13 +40,11 @@
 					goalName:$(this).attr("goal-name")
 				}
 			}, function(data) {
-				$(".${assistantName}-container .index").hide();
-				$(".${assistantName}-item-content").html(data);
-				$(".${assistantName}-container .item").show();
+				$(".${assistantName}-container").html(data);
 			});
 		}
 		
-		$(".${assistantName}-item").click(${assistantName}ItemClick);
+		$(document).on('click',".${assistantName}-item .tile",${assistantName}ItemClick);
 	</script>
 
 </div>
