--- a/src/main/resources/assets/interview/index.htm
+++ b/src/main/resources/assets/interview/index.htm
@@ -76,14 +76,16 @@
 			}, function(data) {
 				var list=$(data).find(".index").html();
 				$(".${assistantName}-container .index").html(list);
+				$(".${assistantName}-changelist-btn").click(${assistantName}ChangelistClick);
+				$(".${assistantName}-item").click(${assistantName}ItemClick);
 			});
 		}
 	
-		$(document).on('click',".${assistantName}-changelist-btn",${assistantName}ChangelistClick);
+		$(".${assistantName}-changelist-btn").click(${assistantName}ChangelistClick);
 		
-		$(document).on('click',".${assistantName}-item",${assistantName}ItemClick);
+		$(".${assistantName}-item").click(${assistantName}ItemClick);
 		
-		$(".${assistantName}-back-btn").on('click',function(){
+		$(".${assistantName}-back-btn").click(function(){
 			$(".${assistantName}-container .item").hide();
 			$(".${assistantName}-container .index").show();
 		});
