--- a/src/main/resources/assets/goal/item.htm
+++ b/src/main/resources/assets/goal/item.htm
@@ -1,6 +1,6 @@
-<div class="col-md-4 ${assistantName}-container">
+<div class="col-md-4 ${assistantName}-container" name="${assistantName}-container">
 	<div class="tile">
-		<h2 class="tile-title">${assistantName}</h2>
+		<h2 class="tile-title">${assistantTitle}</h2>
 		<div class="tile-config dropdown">
 			<a data-toggle="dropdown" href="" class="tile-menu"></a>
 			<ul class="dropdown-menu pull-right text-right">
