--- a/src/main/resources/assets/goal/index.htm
+++ b/src/main/resources/assets/goal/index.htm
@@ -1,7 +1,7 @@
-<div class="col-md-4 ${assistantName}-container">
+<div class="col-md-4 ${assistantName}-container" name="${assistantName}-container">
 
 	<div class="tile">
-		<h2 class="tile-title">${assistantName}</h2>
+		<h2 class="tile-title">${assistantTitle}</h2>
 		<div class="tile-body p-10">
 			<div class="listview narrow">
 				<% for(item in goalList){ %>
