--- a/src/main/resources/assets/interview/index.htm
+++ b/src/main/resources/assets/interview/index.htm
@@ -1,7 +1,7 @@
-<div class="col-md-4 ${assistantName}-container">
+<div class="col-md-4 ${assistantName}-container" name="${assistantName}-container">
 
 	<div class="tile index">
-		<h2 class="tile-title">${assistantName}</h2>
+		<h2 class="tile-title">${assistantTitle}</h2>
 		<div class="tile-config dropdown">
 			<a data-toggle="dropdown" href="" class="tile-menu"></a>
 			<ul class="dropdown-menu pull-right text-right">
@@ -28,7 +28,7 @@
 	</div>
 
 	<div class="tile item" style="display: none;">
-		<h2 class="tile-title">${assistantName}</h2>
+		<h2 class="tile-title">${assistantTitle}</h2>
 		<div class="tile-config dropdown">
 			<a data-toggle="dropdown" href="" class="tile-menu"></a>
 			<ul class="dropdown-menu pull-right text-right">
