动画效果调整

--- a/src/main/resources/assets/financing/shares.htm
+++ b/src/main/resources/assets/financing/shares.htm
@@ -1,4 +1,4 @@
-<div class="col-md-4 ${assistantName}-container" name="${assistantName}-container">
+<div class="col-md-4 ${assistantName}-container" animate="true">
 
 	<div class="tile index">
 		<h2 class="tile-title">${assistantTitle}</h2>
