--- a/src/main/resources/assets/main.htm
+++ b/src/main/resources/assets/main.htm
@@ -1,4 +1,4 @@
-<div class="col-md-12 ${assistantName}-container" name="${assistantName}-container">
+<div class="col-md-12 ${assistantName}-container" animate="true">
 <div class="tile">
 	<div class="tile-body p-10" style="max-height:10pc;overflow:auto;">
 		<div>
