--- a/src/main/resources/assets/goal/item.htm
+++ b/src/main/resources/assets/goal/item.htm
@@ -1,70 +1,67 @@
-<div class="col-md-4 ${assistantName}-container" name="${assistantName}-container">
-	<div class="tile">
-		<h2 class="tile-title">${assistantTitle}</h2>
-		<div class="tile-config dropdown">
-			<a data-toggle="dropdown" href="" class="tile-menu"></a>
-			<ul class="dropdown-menu pull-right text-right">
-				<li><a href="javascript:;" class="${assistantName}-back-btn"
-					goal-name="${stage.goal_name}">返 回</a></li>
-			</ul>
-		</div>
-		<div class="tile-body p-10">
-			<form role="form" class="${assistantName}-form">
-				<div class="form-group">
-					<label for="exampleInputEmail1">stage_cost_hours</label>
-					<div class="p-relative">
-						<input type="text"
-							class="form-control input-sm spinedit stage_cost_hours"
-							data-spinedit-max="500" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="exampleInputEmail1">progress</label> <input type="text"
-						class="input-slider progress" data-slider-min="0"
-						data-slider-max="100" data-slider-value="1">
-				</div>
-				<div class="form-group">
-					<label for="exampleInputEmail1">remark</label>
-					<textarea class="form-control input-sm remark"
-						placeholder="Enter remark"></textarea>
-				</div>
-
-				<button type="submit" class="btn btn-sm m-t-10">Save</button>
-				<button type="submit" class="btn btn-sm m-t-10">Cancel</button>
-			</form>
-		</div>
-		<div class="clearfix"></div>
+<div class="tile">
+	<h2 class="tile-title">${assistantTitle}</h2>
+	<div class="tile-config dropdown">
+		<a data-toggle="dropdown" href="" class="tile-menu"></a>
+		<ul class="dropdown-menu pull-right text-right">
+			<li><a href="javascript:;" class="${assistantName}-back-btn"
+				goal-name="${stage.goal_name}">返 回</a></li>
+		</ul>
 	</div>
+	<div class="tile-body p-10">
+		<form role="form" class="${assistantName}-form">
+			<div class="form-group">
+				<label for="exampleInputEmail1">stage_cost_hours</label>
+				<div class="p-relative">
+					<input type="text"
+						class="form-control input-sm spinedit stage_cost_hours"
+						data-spinedit-max="500" />
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="exampleInputEmail1">progress</label> <input type="text"
+					class="input-slider progress" data-slider-min="0"
+					data-slider-max="100" data-slider-value="1">
+			</div>
+			<div class="form-group">
+				<label for="exampleInputEmail1">remark</label>
+				<textarea class="form-control input-sm remark"
+					placeholder="Enter remark"></textarea>
+			</div>
 
-	<style>
+			<button type="submit" class="btn btn-sm m-t-10">Save</button>
+			<button type="submit" class="btn btn-sm m-t-10">Cancel</button>
+		</form>
+	</div>
+	<div class="clearfix"></div>
+</div>
+
+<style>
 </style>
 
 	<script>
-		$(".${assistantName}-back-btn").click(function(){
-			assistant.requestData({
-				assistantType:${assistantType},
-				isLocationPath:true,
-				requestContent : "getStageListByGoalName",
-				extraInfo:{
-					goalName:$(this).attr("goal-name")
-				}
-			}, function(data) {
-				assistant.appendMainContainerUnique(data,'${assistantName}-container');
-			});
+	$(".${assistantName}-back-btn").click(function(){
+		assistant.requestData({
+			assistantType:${assistantType},
+			isLocationPath:true,
+			requestContent : "getStageListByGoalName",
+			extraInfo:{
+				goalName:$(this).attr("goal-name")
+			}
+		}, function(data) {
+			assistant.appendContainer(data,'${assistantName}-container');
 		});
-		
-		if ($('.input-slider')[0]) {
-			$('.input-slider').slider().on('slide', function(ev) {
-				// $(this).closest('.slider-container').find('.slider-value').val(ev.value);
-			});
-		}
-		
-		if ($('.spinner')[0]) {
-			$('.spinner').each(function() {
-				var max = $(this).attr("data-spinner-max");
-				$(this).spinedit('setMaxmum', max ? max : 100);
-			});
-		}
-	</script>
-
-</div>
+	});
+	
+	if ($('.input-slider')[0]) {
+		$('.input-slider').slider().on('slide', function(ev) {
+			// $(this).closest('.slider-container').find('.slider-value').val(ev.value);
+		});
+	}
+	
+	if ($('.spinner')[0]) {
+		$('.spinner').each(function() {
+			var max = $(this).attr("data-spinner-max");
+			$(this).spinedit('setMaxmum', max ? max : 100);
+		});
+	}
+</script>
