--- a/src/main/resources/assets/family/index.htm
+++ b/src/main/resources/assets/family/index.htm
@@ -2,31 +2,36 @@
 
 	<div class="tile">
 		<h2 class="tile-title">${assistantTitle}</h2>
+		<div class="tile-config dropdown">
+            <a data-toggle="dropdown" href="" class="tile-menu"></a>
+            <ul class="dropdown-menu pull-right text-right">
+                <li><a href="liferecord/record.html">记录生活</a></li>
+            </ul>
+        </div>
 		<div class="tile-body p-10">
 			<div class="listview narrow">
-				<% for(item in goalList){ %>
-				<div class="media ${assistantName}-item" goal-name="${item.goal_name}">
-					<div class="pull-right">
-                         <div class="counts">${item.progress_cost_hours}/${item.goal_cost_hours} h</div>
+				<header class="listview-header media">
+                    <div class="col-md-8 col-xs-8">
+                        <input class="input-sm pull-right form-control idea-word" type="text" placeholder="Your ideas....">
                     </div>
-                    <div class="media-body">
-                        <h6>${item.goal_name}</h6>
-                        <div class="progress progress-small">
-                            <a href="#" data-toggle="tooltip" title="${item.goal_progress}%" class="progress-bar tooltips progress-bar-danger" style="width: ${item.goal_progress}%;" data-original-title="${item.goal_progress}%"></a>
-                        </div>
+                    <div class="col-md-4 col-xs-4">
+                        <button type="submit" class="btn btn-sm ding">Ding</button>
                     </div>
-				</div>
-				<%}%>
+                </header>
+                <% for(item in recordList){ %>
+                <div class="media">
+                    <div class="media-body ${assistantName}-item" item-id="${item.id}">
+                        <div class="block attrs" style="color: #d9534f;">${item.record_time}</div>
+                        <font style="font-size: 18px;">${item.record_title}</font>
+                        <div class="clearfix"></div>
+                        <small>${item.optimization}</small>
+                    </div>
+                </div>
+                <%}%>
 			</div>
 		</div>
 		<div class="clearfix"></div>
 	</div>
-
-	<style>
-		.${assistantName}-item {
-			cursor: pointer;
-		}
-	</style>
 
 	<script>
 		assistant.keepAssistantContainerUnique('${assistantName}-container');
@@ -35,9 +40,9 @@
 			assistant.requestData({
 				assistantType:${assistantType},
 				isLocationPath:true,
-				requestContent : "getStageListByGoalName",
+				requestContent : "getRecordById",
 				extraInfo:{
-					goalName:$(this).attr("goal-name")
+					redordId:$(this).attr("item-id")
 				}
 			}, function(data) {
 				assistant.appendContainer(data,'${assistantName}-container');
@@ -45,6 +50,22 @@
 		}
 		
 		$(".${assistantName}-item").click(${assistantName}ItemClick);
+		
+		function ${assistantName}Ding(){
+			var word=$(".${assistantName}-container .idea-word").val();
+			assistant.requestData({
+				assistantType:${assistantType},
+				isLocationPath:true,
+				requestContent : "getRecordListByWord",
+				extraInfo:{
+					word:word?word:"";
+				}
+			}, function(data) {
+				assistant.appendContainer($(data).html(),'${assistantName}-container');
+			});
+		}
+		
+		$(".${assistantName}-container .ding").click(${assistantName}Ding);
 	</script>
 
 </div>
