--- a/src/main/resources/assets/family/item.htm
+++ b/src/main/resources/assets/family/item.htm
@@ -75,10 +75,10 @@
 			isLocationPath:true,
 			requestContent : "saveRecord",
 			extraInfo:{
-				type_name:$(".${assistantName} .type_name").val(),
-				record_time:$(".${assistantName} .record_time").val(),
-				record_title:$(".${assistantName} .record_title").val(),
-				record_content:$(".${assistantName} .record_content").val(),
+				typeName:$(".${assistantName} .type_name").val(),
+				recordTime:$(".${assistantName} .record_time").val(),
+				recordTitle:$(".${assistantName} .record_title").val(),
+				recordContent:$(".${assistantName} .record_content").val(),
 				optimization:$(".${assistantName} .optimization").val()
 			}
 		}, function(data) {
