--- a/src/main/resources/assets/goal/index.htm
+++ b/src/main/resources/assets/goal/index.htm
@@ -12,7 +12,7 @@
                     <div class="media-body">
                         <h6>${item.goal_name}</h6>
                         <div class="progress progress-small">
-                            <a href="#" data-toggle="tooltip" title="${item.goal_progress}%" class="progress-bar tooltips progress-bar-danger" style="width: ${item.goal_progress}%;" data-original-title="${item.goal_progress}%"></a>
+                            <a href="javascript:;" data-toggle="tooltip" title="${item.goal_progress}%" class="progress-bar tooltips progress-bar-danger" style="width: ${item.goal_progress}%;" data-original-title="${item.goal_progress}%"></a>
                         </div>
                     </div>
 				</div>
