--- a/src/main/resources/assets/goal/list.htm
+++ b/src/main/resources/assets/goal/list.htm
@@ -18,7 +18,7 @@
                    <div class="media-body">
                        <h6>${item.stage_name}</h6>
                        <div class="progress progress-small">
-                           <a href="#" data-toggle="tooltip" title="${item.progress}%" class="progress-bar tooltips progress-bar-danger" style="width: ${item.progress}%;" data-original-title="${item.progress}%"></a>
+                           <a href="javascript:;" data-toggle="tooltip" title="${item.progress}%" class="progress-bar tooltips progress-bar-danger" style="width: ${item.progress}%;" data-original-title="${item.progress}%"></a>
                        </div>
                    </div>
 			</div>
