--- a/src/main/resources/assets/family/email.htm
+++ b/src/main/resources/assets/family/email.htm
@@ -143,7 +143,7 @@
                                             <tr>
                                                 <td data-color="detail" data-size="detail" align="center" style="font-family: 'Open sans', Arial, sans-serif; color:#a7aeb3; font-size:11px; line-height: auto;font-style: italic;">
                                                     <singleline>
-                                                      ${title}
+                                                      ${lifeMoto}
                                                     </singleline>
                                                 </td>
                                             </tr>
