--- a/src/main/resources/assets/schedule/tasklist.htm
+++ b/src/main/resources/assets/schedule/tasklist.htm
@@ -22,7 +22,7 @@
 	<style>
 		.${assistantName}-${taskCode}-item .status1{
 			text-decoration:line-through;
-			color: grey;
+			color: #e6e6e6;
 		}
 	</style>
 
