--- a/src/main/resources/assets/knowledgebase/item.htm
+++ b/src/main/resources/assets/knowledgebase/item.htm
@@ -1,8 +1,8 @@
-<div class="col-md-4 ${assistantName}-container" animate="true">
+<div class="col-md-12 ${assistantName}-container" animate="true">
 
 	<div class="tile">
 		<h2 class="tile-title">${assistantTitle}</h2>
-		<div class="tile-body p-10">
+		<div class="tile-body-50 p-10">
 			<iframe style="height:100%;width:100%;" src="http://player.youku.com/embed/XMjczNzEyODg3Ng==" frameborder=0 'allowfullscreen'></iframe>
 		</div>
 		<div class="clearfix"></div>
