--- a/src/main/resources/assets/family/item.htm
+++ b/src/main/resources/assets/family/item.htm
@@ -6,7 +6,7 @@
 			<li><a href="javascript:;" class="back-btn">返 回</a></li>
 		</ul>
 	</div>
-	<div class="tile-body p-10">
+	<div class="tile-body h-pc-10 p-10">
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 <div class="p-15">
