--- a/src/main/resources/assets/goal/list.htm
+++ b/src/main/resources/assets/goal/list.htm
@@ -8,7 +8,7 @@
 					回</a></li>
 		</ul>
 	</div>
-	<div class="tile-body p-10">
+	<div class="tile-body h-pc-10 p-10">
 		<div class="listview narrow">
 			<% for(item in stageList){ %>
 			<div class="media ${assistantName}-item" item-id="${item.id}">
