--- a/src/main/resources/assets/main.htm
+++ b/src/main/resources/assets/main.htm
@@ -1,6 +1,6 @@
 <div class="col-md-12 ${assistantName}-container" animate="true">
 <div class="tile">
-	<div class="tile-body p-10" style="max-height:10pc;overflow:auto;">
+	<div class="tile-body h-pc-10 p-10">
 		<div>
 			<h3>${welcomeMsg}</h3>
 		</div>
