--- a/src/main/resources/assets/schedule/tasklist.htm
+++ b/src/main/resources/assets/schedule/tasklist.htm
@@ -2,7 +2,7 @@
 
 	<div class="tile">
 		<h2 class="tile-title">${assistantTitle}-${taskValue}</h2>
-		<div class="tile-body p-10">
+		<div class="tile-body h-pc-10 p-10">
 			<div class="listview narrow ${assistantName}-list">
 				<% for(item in taskList){ %>
 				<div class="media ${assistantName}-${taskCode}-item" item-id="${item.id}">
