--- a/src/main/resources/assets/family/index.htm
+++ b/src/main/resources/assets/family/index.htm
@@ -8,7 +8,7 @@
                 <li><a href="javascript:;" class="record-btn">记录生活</a></li>
             </ul>
         </div>
-		<div class="tile-body p-10">
+		<div class="tile-body h-pc-10 p-10">
 			<div class="listview narrow">
 				<header class="listview-header media">
                     <div class="col-md-8 col-xs-8">
