--- a/src/main/resources/assets/financing/shares.htm
+++ b/src/main/resources/assets/financing/shares.htm
@@ -2,7 +2,7 @@
 
 	<div class="tile index">
 		<h2 class="tile-title">${assistantTitle}</h2>
-		<div class="tile-body p-10">
+		<div class="tile-body h-pc-10 p-10">
 			<div class="listview narrow ${assistantName}-list">
 				<% for(item in sharesList){ %>
 				<div class="media ${assistantName}-item" item-id="${item.id}">
