--- a/src/main/resources/assets/goal/index.htm
+++ b/src/main/resources/assets/goal/index.htm
@@ -2,7 +2,7 @@
 
 	<div class="tile">
 		<h2 class="tile-title">${assistantTitle}</h2>
-		<div class="tile-body p-10">
+		<div class="tile-body h-pc-10 p-10">
 			<div class="listview narrow">
 				<% for(item in goalList){ %>
 				<div class="media ${assistantName}-item" goal-name="${item.goal_name}">
