--- a/src/main/resources/assets/goal/item.htm
+++ b/src/main/resources/assets/goal/item.htm
@@ -7,7 +7,7 @@
 				goal-name="${stage.goal_name}">返 回</a></li>
 		</ul>
 	</div>
-	<div class="tile-body p-10">
+	<div class="tile-body h-pc-10 p-10">
 		<form role="form" class="${assistantName}-form">
 			<div class="form-group">
 				<label for="exampleInputEmail1">stage_cost_hours</label>
