--- a/src/main/resources/assets/interview/index.htm
+++ b/src/main/resources/assets/interview/index.htm
@@ -9,7 +9,7 @@
 					class="${assistantName}-changelist-btn">换一批</a></li>
 			</ul>
 		</div>
-		<div class="tile-body p-10">
+		<div class="tile-body h-pc-10 p-10">
 			<div class="listview narrow ${assistantName}-list"
 				beginRowNum="${beginRowNum}" rowCount="${rowCount}">
 				<% for(item in subjectList){ %>
@@ -36,7 +36,7 @@
 						回</a></li>
 			</ul>
 		</div>
-		<div class="tile-body p-10 ${assistantName}-item-content"></div>
+		<div class="tile-body h-pc-10 p-10 ${assistantName}-item-content"></div>
 		<div class="clearfix"></div>
 	</div>
 
